--- a/marketplace/core/templates/core/base.html
+++ b/marketplace/core/templates/core/base.html
@@ -10,12 +10,16 @@
     <nav class="px-6 py-6 flex justify-between items-center border-b border-gray-200">
         <a href="/" class="text-xl font-semibold">Marketplace</a>
         <div class="space-x-6">
-            <a href="#" class="text-lg font-semibold hover:text-gray-500">New Item</a>
+            <a href="{% url 'item:new_item' %}" class="text-lg font-semibold hover:text-gray-500">New Item</a>
             <a href="#" class="text-lg font-semibold hover:text-gray-500">Browse</a>
 
-            <a href="#" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Sign Up</a>
-            <a href="#" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Log In</a>
-
+            {% if request.user.is_authenticated %}
+                <a href="#" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Inbox</a>
+                <a href="#" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Dashboard</a>
+            {% else %}
+                <a href="{% url 'core:signup' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Sign Up</a>
+                <a href="{% url 'core:login' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Log In</a>
+            {% endif %}
 
         </div>
     </nav>
@@ -35,7 +39,7 @@
 
             <ul class="space-y-2">
                 <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">About</a></li>
-                <li><a href="{% url 'contact' %}" class="text-lg text-teal-500 hover:text-teal-700">Contact</a></li>
+                <li><a href="{% url 'core:contact' %}" class="text-lg text-teal-500 hover:text-teal-700">Contact</a></li>
                 <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">Privacy Policy</a></li>
                 <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">Terms Of Use</a></li>
             </ul>
