--- a/marketplace/core/templates/core/index.html
+++ b/marketplace/core/templates/core/index.html
@@ -1,9 +1,9 @@
 {% extends 'core/base.html' %}
-{% block title %} Welcome {% endblock %} 
+{% block title %} Bienvenido {% endblock %} 
 
 {% block content %}
     <div class="mt-6 px-6 py-6 bg-gray-100 rounded-xl">
-        <h2 class="mb-12 text-2xl text-center">Newest Items</h2>
+        <h2 class="mb-12 text-2xl text-center">Últimos Items</h2>
 
         <div class="grid grid-cols-3 gap-3">
             {% for item in items %}
@@ -15,7 +15,7 @@
 
                         <div class="p-6 bg-white rounded-b-xl">
                             <h2 class="text-2xl">{{ item.name }}</h2>
-                            <p class="text-gray-500">Price {{ item.price }}</p>
+                            <p class="text-gray-500">Precio {{ item.price }}</p>
                         </div>
                     </a>
                 </div>
@@ -24,7 +24,7 @@
     </div>
 
     <div class="mt-6 px-6 py-6 bg-gray-100 rounded-xl">
-        <h2 class="mb-12 text-2xl text-center">Categories</h2>
+        <h2 class="mb-12 text-2xl text-center">Categorías</h2>
         <div class="grid grid-cols-3 gap-3">
             {% for category in categories %}
                 <div>
