--- a/marketplace/core/templates/core/signup.html
+++ b/marketplace/core/templates/core/signup.html
@@ -1,31 +1,31 @@
 {% extends 'core/base.html' %}
 
-{% block title %}Sign Up{% endblock %}
+{% block title %}Registrarse{% endblock %}
 
 {% block content %}
 <div class="w-1/2 my-6 mx-auto p-6 bg-gray-100 rounded-xl">
-    <h1 class="mb-6 text-3xl">Sign Up</h1>
+    <h1 class="mb-6 text-3xl">Registrarse</h1>
 
     <form method="post" action=".">
         {% csrf_token %}
         
         <div class="mb-3">
-            <label class="inline-block mb-2">Username</label><br>
+            <label class="inline-block mb-2">Nombre de Usuario</label><br>
             {{ form.username }}
         </div>
 
         <div class="mb-3">
-            <label class="inline-block mb-2">Email</label><br>
+            <label class="inline-block mb-2">Correo Electrónico</label><br>
             {{ form.email }}
         </div>
 
         <div class="mb-3">
-            <label class="inline-block mb-2">Password</label><br>
+            <label class="inline-block mb-2">Contraseña</label><br>
             {{ form.password1 }}
         </div>
 
         <div class="mb-3">
-            <label class="inline-block mb-2">Repeat Password</label><br>
+            <label class="inline-block mb-2">Repita la Contraseña</label><br>
             {{ form.password2 }}
         </div>
 
@@ -39,7 +39,7 @@
             </div>
         {% endif %}
 
-        <button class="px-8 py-4 text-lg bg-teal-500 hover:bg-teal-700 rounded-xl text-white">Submit</button>
+        <button class="px-8 py-4 text-lg bg-teal-500 hover:bg-teal-700 rounded-xl text-white">Aceptar</button>
     </form>
 </div>
 {% endblock %}
