--- a/marketplace/item/templates/item/detail.html
+++ b/marketplace/item/templates/item/detail.html
@@ -10,29 +10,29 @@
 
     <div class="col-span-2 p-6 bg-gray-100 rounded-xl">
         <h1 class="mb-6 text-3xl">{{ item.name }}</h1>
-        <p class="text-gray-500"><strong>Price: </strong>{{ item.price }}</p>
-        <p class="text-gray-500"><strong>Seller: </strong>{{ item.created_by.username }}</p>
+        <p class="text-gray-500"><strong>Precio: </strong>{{ item.price }}</p>
+        <p class="text-gray-500"><strong>Vendedor: </strong>{{ item.created_by.username }}</p>
 
         {% if item.description %}
             <p class="text-gray-700">
-                <strong class="text-gray-500">Description:</strong><br>
+                <strong class="text-gray-500">Descripción:</strong><br>
                 {{ item.description }}
             </p>
         {% endif %}
         
         {% if request.user == item.created_by %}
             <div class="mt-6 p-6 bg-white rounded-xl">
-                <p>This is your Item!</p>
-                <a href="{% url 'item:edit' item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl">Edit</a>
-                <a href="{% url 'item:delete' item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-red-500 text-white rounded-xl">Delete</a>
+                <p>Este es tu Item!</p>
+                <a href="{% url 'item:edit' item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl">Editar</a>
+                <a href="{% url 'item:delete' item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-red-500 text-white rounded-xl">Borrar</a>
             </div>
         {% else %}
-            <a href="#" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Contact Seller</a>
+            <a href="{% url 'conversation:new' item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Contacto del Vendedor</a>
         {% endif %}
     </div>
 </div>
 <div class="mt-6 px-6 py-6 bg-gray-100 rounded-xl">
-    <h2 class="mb-12 text-2xl text-center">Related Items</h2>
+    <h2 class="mb-12 text-2xl text-center">Items Similares</h2>
 
     <div class="grid grid-cols-3 gap-3">
         {% for item in related_items %}
@@ -44,7 +44,7 @@
 
                     <div class="p-6 bg-white rounded-b-xl">
                         <h2 class="text-2xl">{{ item.name }}</h2>
-                        <p class="text-gray-500">Price {{ item.price }}</p>
+                        <p class="text-gray-500">Precio {{ item.price }}</p>
                     </div>
                 </a>
             </div>
