--- a/marketplace/item/templates/item/item_list.html
+++ b/marketplace/item/templates/item/item_list.html
@@ -6,14 +6,14 @@
     <div class="pb-6 grid grid-cols-4 gap-4 bg-gray-100">
         <div class="col-span-1">
             <form method="get" action="{% url 'item:item_list' %}">
-                <input name="query" class="w-full px-6 py-4 border rounded-xl" type="text" value="{{ query }}" placeholder="Find a bike, a chair or a car...">
+                <input name="query" class="w-full px-6 py-4 border rounded-xl" type="text" value="{{ query }}" placeholder="Busca una bici, un auto, una silla...">
 
-                <button class="mt-2 px-8 py-4 text-lg bg-teal-500 text-white rounded-xl">Search</button>
+                <button class="mt-2 px-8 py-4 text-lg bg-teal-500 text-white rounded-xl">Buscar</button>
             </form>
 
             <hr class="my-6">
 
-            <p class="font-semibold">Categories</p>
+            <p class="font-semibold">Categorías</p>
 
             <ul>
                 {% for category in categories %}
@@ -28,7 +28,7 @@
             <p class="font-semibold">Clear Filters.</p>
             <ul>
                 <li>
-                    <a href="{% url 'item:item_list' %}" class="mt-2 px-8 py-4 inline-block  bg-yellow-500 text-lg rounded-xl text-white">Clear</a>
+                    <a href="{% url 'item:item_list' %}" class="mt-2 px-8 py-4 inline-block  bg-yellow-500 text-lg rounded-xl text-white">Limpiar</a>
                 </li>
             </ul>
         </div>
@@ -44,7 +44,7 @@
     
                             <div class="p-6 bg-white rounded-b-xl">
                                 <h2 class="text-2xl">{{ item.name }}</h2>
-                                <p class="text-gray-500">Price {{ item.price }}</p>
+                                <p class="text-gray-500">Precio {{ item.price }}</p>
                             </div>
                         </a>
                     </div>
