--- a/marketplace/core/templates/core/contact.html
+++ b/marketplace/core/templates/core/contact.html
@@ -1,6 +1,6 @@
 {% extends 'core/base.html' %}
-{% block title %} Contact {% endblock %} 
+{% block title %} Contacto {% endblock %} 
 
 {% block content %}
-    <h1>The Contact Page.</h1>
+    <h1>Página de Contacto.</h1>
 {% endblock %}
