Add Contact & About Template.

--- a/marketplace/core/templates/core/contact.html
+++ b/marketplace/core/templates/core/contact.html
@@ -2,5 +2,34 @@
 {% block title %} Contacto {% endblock %} 
 
 {% block content %}
-    <h1>Página de Contacto.</h1>
+    <h1 class="text-center text-2xl font-semibold">Página de Contacto</h2><br>
+    <div class="flex justify-center items-center h-screen grid grid-cols-4 gap-4">
+        <div class="flex flex-col items-center">
+            <h2 class="text-center text-2xl font-semibold mt-4">Instagram</h2><br>
+            <a href="https://www.instagram.com/valentinminolli/?hl=es-la" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/1200px-Instagram_logo_2022.svg.png" class="w-60">
+            </a>
+        </div>
+        <div class="flex flex-col items-center">
+            <h2 class="text-center text-2xl font-semibold mt-4">Twitter</h2><br>
+            <a href="https://twitter.com/vale_minolli" target="_blank">
+            <img src="https://cdn.cms-twdigitalassets.com/content/dam/help-twitter/twitter_logo_blue.png.twimg.768.png" class="w-60">
+            </a>
+        </div>
+        <div class="flex flex-col items-center">
+            <h2 class="text-center text-2xl font-semibold mt-4">Linked In</h2><br>
+            <a href="https://www.linkedin.com/in/valent%C3%ADn-minolli-16186816a/" target="_blank">
+            <img src="https://play-lh.googleusercontent.com/kMofEFLjobZy_bCuaiDogzBcUT-dz3BBbOrIEjJ-hqOabjK8ieuevGe6wlTD15QzOqw" class="w-60 ">
+            </a>
+        </div>
+        <div class="flex flex-col items-center">
+            <h2 class="text-center text-2xl font-semibold mt-4">Facebook</h2><br>
+            <a href="https://www.facebook.com/vale.minolli" target="_blank">
+            <img src="https://www.facebook.com/images/fb_icon_325x325.png" class="w-60 ">
+            </a>
+        </div>
+    </div>
+
 {% endblock %}
+
+
