--- a/marketplace/core/templates/core/about.html
+++ b/marketplace/core/templates/core/about.html
@@ -2,24 +2,24 @@
 {% block title %} Sobre {% endblock %} 
 
 {% block content %}
-    <div class="px-10 py-10 bg-gray-100 rounded-xl">
+    <div class="w-1/2 mx-auto px-10 py-10 bg-gray-100 rounded-xl">
         <h2 class="mb-12 text-2xl text-center">Información de la Página</h2>
-        <p>Acerca de Nuestra Plataforma Marketplace (Proyecto de Curso)<br>
-            ¡Bienvenido a la plataforma Marketplace! Este sitio web es el resultado de un proyecto de programación web desarrollado como parte de un curso de programación web con Python Django. Nuestro objetivo es brindarte un vistazo a cómo podría ser una plataforma en línea para descubrir y comprar una variedad de productos de diferentes vendedores, a través de la implementación de tecnologías web modernas.<br>
+        <p><b>Acerca de Nuestra Plataforma Marketplace (Proyecto de Curso)</b><br><br>
+            ¡Bienvenido a la plataforma Marketplace! Este sitio web es el resultado de un proyecto de programación web desarrollado como parte de un curso de programación web con Python Django. Mi objetivo es brindarte un vistazo a cómo podría ser una plataforma en línea para descubrir y comprar una variedad de productos de diferentes vendedores, a través de la implementación de tecnologías web modernas.<br><br>
             
-            Nuestra Historia<br>
-            Marketplace surgió como un proyecto durante el curso de programación web que se llevó a cabo en [nombre de la institución o curso]. Aquí, los estudiantes aprendieron a crear una plataforma en línea que conecta a compradores y vendedores, y este proyecto es una representación de lo que podríamos lograr en un ambiente de desarrollo web.<br>
+            <b>Nuestra Historia</b><br><br>
+            Marketplace surgió como un proyecto durante el curso de programación web que se llevó a cabo en FreeCodeCamp. Aquí, Valentín Minolli, aprendió a crear una plataforma en línea que conecta a compradores y vendedores, y este proyecto es una representación de lo que podría lograr en un ambiente de desarrollo web.<br><br>
             
-            Nuestra Misión<br>
-            Nuestra misión en este proyecto de curso es proporcionar una plataforma ficticia donde los compradores y vendedores puedan interactuar y experimentar el proceso de compra y venta en línea. Aunque no somos una entidad comercial real, estamos comprometidos a seguir mejores prácticas y proporcionar una experiencia de usuario realista en esta simulación.<br>
+            <b>Nuestra Misión</b><br><br>
+            Nuestra misión en este proyecto de curso es proporcionar una plataforma ficticia donde los compradores y vendedores puedan interactuar y experimentar el proceso de compra y venta en línea. Aunque no somos una entidad comercial real, estamos comprometidos a seguir mejores prácticas y proporcionar una experiencia de usuario realista en esta simulación.<br><br>
             
-            Nuestro Equipo<br>
-            Este proyecto fue desarrollado por un equipo de estudiantes apasionados por aprender y aplicar las habilidades de programación web. Desde el diseño y desarrollo hasta la implementación de características, todos los miembros del equipo han trabajado juntos para llevar a cabo este proyecto educativo.<br>
+            <b>Nuestro Equipo</b><br><br>
+            Este proyecto fue desarrollado por un estudiante apasionado por aprender y aplicar las habilidades de programación web. Desde el diseño y desarrollo hasta la implementación de características, he trabajado para llevar a cabo este proyecto educativo.<br><br>
             
-            Contáctanos<br>
-            Si tienes alguna pregunta o sugerencia relacionada con este proyecto de curso, no dudes en ponerte en contacto con nosotros. Puedes enviarnos un correo electrónico a [tu dirección de correo] o dejar tus comentarios en la sección correspondiente del sitio web. Estamos aquí para ayudarte y aprender de tu retroalimentación.<br>
+            <b>Contáctanos</b><br><br>
+            Si tienes alguna pregunta o sugerencia relacionada con este proyecto de curso, no dudes en ponerte en contacto con nosotros. Puedes enviarnos un correo electrónico a [tu dirección de correo] o dejar tus comentarios en la sección correspondiente del sitio web. Estamos aquí para ayudarte y aprender de tu retroalimentación.
             
-            Gracias por visitar nuestro proyecto Marketplace. Esperamos que disfrutes de tu experiencia en esta plataforma de simulación web.<br>
+            Gracias por visitar nuestro proyecto Marketplace. Esperamos que disfrutes de tu experiencia en esta plataforma de simulación web.
             
             Recuerda que este es un ejemplo ficticio y educativo creado para un proyecto de curso, por lo que es importante ser transparente sobre la naturaleza del proyecto en la sección "About".
         </p>
