--- a/marketplace/core/templates/core/index.html
+++ b/marketplace/core/templates/core/index.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %}
+{% extends '../../index.html' %}
 {% block title %} Bienvenido {% endblock %} 
 
 {% block content %}
