--- a/marketplace/core/templates/core/signup.html
+++ b/marketplace/core/templates/core/signup.html
@@ -6,7 +6,7 @@
 <div class="w-1/2 my-6 mx-auto p-6 bg-gray-100 rounded-xl">
     <h1 class="mb-6 text-3xl">Registrarse</h1>
 
-    <form method="post" action=".">
+    <form method="POST" action=".">
         {% csrf_token %}
         
         <div class="mb-3">
@@ -39,7 +39,7 @@
             </div>
         {% endif %}
 
-        <button class="px-8 py-4 text-lg bg-teal-500 hover:bg-teal-700 rounded-xl text-white">Aceptar</button>
+        <button type="submit" class="px-8 py-4 text-lg bg-teal-500 hover:bg-teal-700 rounded-xl text-white">Aceptar</button>
     </form>
 </div>
 {% endblock %}
